force-app/main/default/objects/BOM__c/BOM__c.object-meta.xml
<CustomObject>
    <label>BOM</label>
    <nameField>
        <displayFormat>BOM-{00000}</displayFormat>
        <label>BOM Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>