force-app/main/default/objects/BOM__c/fields/BurnedGasVolume__c.field-meta.xml
<CustomField>
    <fullName>BurnedGasVolume__c</fullName>
    <label>Gas Flaring Volume (m³)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>