force-app/main/default/objects/BOM__c/fields/ByPartialShutdownFSOCharter__c.field-meta.xml
<CustomField>
    <fullName>ByPartialShutdownFSOCharter__c</fullName>
    <label>Reduction by Partial SD FSO (Charter)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>