force-app/main/default/objects/BOM__c/fields/ByPartialShutdownFSOServices__c.field-meta.xml
<CustomField>
    <fullName>ByPartialShutdownFSOServices__c</fullName>
    <label>Reduction by Partial SD FSO (Services)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>