force-app/main/default/objects/BOM__c/fields/DailyRateBRL__c.field-meta.xml
<CustomField>
    <fullName>DailyRateBRL__c</fullName>
    <label>Daily Rate (BRL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>