force-app/main/default/objects/BOM__c/fields/DailyRateLosses__c.field-meta.xml
<CustomField>
    <fullName>DailyRateLosses__c</fullName>
    <formula>TotalPossibleDaysPeriod__c - RDOsDailyRateSum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total daily rate losses (Charter)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>