force-app/main/default/objects/BOM__c/fields/DailyRateUSD__c.field-meta.xml
<CustomField>
    <fullName>DailyRateUSD__c</fullName>
    <label>Daily Rate (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>