force-app/main/default/objects/BOM__c/fields/Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Efficiency__c</fullName>
    <formula>RDOsDailyRateSum__c / TotalPossibleDaysPeriod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Efficiency (Charter)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>