force-app/main/default/objects/BOM__c/fields/EfficiencyServices__c.field-meta.xml
<CustomField>
    <fullName>EfficiencyServices__c</fullName>
    <formula>RDOsDailyRateSumServices__c / TotalPossibleDaysPeriod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Efficiency (Services)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>