force-app/main/default/objects/BOM__c/fields/IUGA__c.field-meta.xml
<CustomField>
    <fullName>IUGA__c</fullName>
    <label>IUGA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>