force-app/main/default/objects/BOM__c/fields/N__c.field-meta.xml
<CustomField>
    <fullName>N__c</fullName>
    <label>N</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>