force-app/main/default/objects/BOM__c/fields/POBClient__c.field-meta.xml
<CustomField>
    <fullName>POBClient__c</fullName>
    <label>POB Client (meals)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>