force-app/main/default/objects/BOM__c/fields/RDOsDailyRateSum__c.field-meta.xml
<CustomField>
    <fullName>RDOsDailyRateSum__c</fullName>
    <label>RDOs Daily Rate Sum (Charter)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>