force-app/main/default/objects/BOM__c/fields/RDOsDailyRateSumServices__c.field-meta.xml
<CustomField>
    <fullName>RDOsDailyRateSumServices__c</fullName>
    <label>RDOs Daily Rate Sum (Services)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>