force-app/main/default/objects/BOM__c/fields/ReferenceMonth__c.field-meta.xml
<CustomField>
    <fullName>ReferenceMonth__c</fullName>
    <label>Reference Month</label>
    <length>20</length>
    <type>Text</type>
</CustomField>