force-app/main/default/objects/BOM__c/fields/RevenueCharter__c.field-meta.xml
<CustomField>
    <fullName>RevenueCharter__c</fullName>
    <label>Charter Revenue (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>