force-app/main/default/objects/BOM__c/fields/RevenueServices__c.field-meta.xml
<CustomField>
    <fullName>RevenueServices__c</fullName>
    <label>Services Revenue (BRL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>