force-app/main/default/objects/BOM__c/fields/RMCharterAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>RMCharterAmountUSD__c</fullName>
    <label>RM Charter Amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>