force-app/main/default/objects/BOM__c/fields/RMCharterNumber__c.field-meta.xml
<CustomField>
    <fullName>RMCharterNumber__c</fullName>
    <label>RM Charter Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>