force-app/main/default/objects/BOM__c/fields/RMServicesAmountBRL__c.field-meta.xml
<CustomField>
    <fullName>RMServicesAmountBRL__c</fullName>
    <label>RM Services Amount (BRL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>