force-app/main/default/objects/BOM__c/fields/RMServicesNumber__c.field-meta.xml
<CustomField>
    <fullName>RMServicesNumber__c</fullName>
    <label>RM Services Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>