force-app/main/default/objects/BOM__c/fields/SumDailyRates__c.field-meta.xml
<CustomField>
    <fullName>SumDailyRates__c</fullName>
    <label>Sum of daily rates</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>