force-app/main/default/objects/BOM__c/fields/SumDieselConsumed__c.field-meta.xml
<CustomField>
    <fullName>SumDieselConsumed__c</fullName>
    <label>Sum of diesel consumed</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>