force-app/main/default/objects/BOM__c/fields/TotalDailyRateLossesServices__c.field-meta.xml
<CustomField>
    <fullName>TotalDailyRateLossesServices__c</fullName>
    <formula>TotalPossibleDaysPeriod__c - RDOsDailyRateSumServices__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total daily rate losses (Services)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>