force-app/main/default/objects/BOM__c/fields/TotallossesBRL__c.field-meta.xml
<CustomField>
    <fullName>TotallossesBRL__c</fullName>
    <formula>TotalDailyRateLossesServices__c * DailyRateBRL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total losses (BRL) new</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>