force-app/main/default/objects/BOM__c/fields/TotalLossesBRLAuto__c.field-meta.xml
<CustomField>
    <fullName>TotalLossesBRLAuto__c</fullName>
    <label>Total losses (BRL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>