force-app/main/default/objects/BOM__c/fields/TotalLossesUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalLossesUSD__c</fullName>
    <formula>DailyRateLosses__c * DailyRateUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total losses (USD) new</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>