force-app/main/default/objects/BOM__c/fields/TotalLossesUSDAuto__c.field-meta.xml
<CustomField>
    <fullName>TotalLossesUSDAuto__c</fullName>
    <label>Total losses (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>