force-app/main/default/objects/BOM__c/fields/TotalPossibleDaysPeriod__c.field-meta.xml
<CustomField>
    <fullName>TotalPossibleDaysPeriod__c</fullName>
    <formula>EndDate__c - StartDate__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total possible days in the period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>