force-app/main/default/objects/BOM__c/fields/TotalReductionByOffloadingDelay__c.field-meta.xml
<CustomField>
    <fullName>TotalReductionByOffloadingDelay__c</fullName>
    <label>Total reduction by Offloading delay</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>