force-app/main/default/objects/BOM__c/fields/TotalReductionByTotalWIStop__c.field-meta.xml
<CustomField>
    <fullName>TotalReductionByTotalWIStop__c</fullName>
    <label>Total reduction by Total WI Stop</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>