force-app/main/default/objects/BOM__c/fields/TotalReductionByWIPartialStop__c.field-meta.xml
<CustomField>
    <fullName>TotalReductionByWIPartialStop__c</fullName>
    <label>Total reduction by WI Partial Stop</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>