force-app/main/default/objects/BOM__c/fields/TotalReductionIUGAAuto__c.field-meta.xml
<CustomField>
    <fullName>TotalReductionIUGAAuto__c</fullName>
    <label>Total reduction by IUGA</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>