force-app/main/default/objects/BOM__c/fields/TotalReductionPartialShutdownAuto__c.field-meta.xml
<CustomField>
    <fullName>TotalReductionPartialShutdownAuto__c</fullName>
    <label>Total reduction by Partial Shutdown</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>