force-app/main/default/objects/BOM__c/fields/TotalReductionShutdownAuto__c.field-meta.xml
<CustomField>
    <fullName>TotalReductionShutdownAuto__c</fullName>
    <label>Total reduction by Shutdown</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>