force-app/main/default/objects/BOM__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vessel__c</columns>
    <columns>VesselShortName__c</columns>
    <columns>ReferenceMonth__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Administrator</role>
        <role>Commercial</role>
        <role>VesselContractAdministrator</role>
        <role>Vessel_Contract_Read</role>
    </sharedTo>
</ListView>