force-app/main/default/objects/BOM__c/listViews/MV15.listView-meta.xml
<ListView>
    <fullName>MV15</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>ReferenceMonth__c</columns>
    <columns>RDOsDailyRateSum__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV15</value>
    </filters>
    <label>MV15</label>
</ListView>