force-app/main/default/objects/BOM__c/listViews/MV18.listView-meta.xml
<ListView>
    <fullName>MV18</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>ReferenceMonth__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>RDOsDailyRateSum__c</columns>
    <columns>RevenueCharter__c</columns>
    <columns>RevenueServices__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV18</value>
    </filters>
    <label>MV18</label>
</ListView>