force-app/main/default/objects/BOM__c/listViews/MV22.listView-meta.xml
<ListView>
    <fullName>MV22</fullName>
    <columns>NAME</columns>
    <columns>VesselShortName__c</columns>
    <columns>ReferenceMonth__c</columns>
    <columns>RDOsDailyRateSum__c</columns>
    <columns>StartDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV22</value>
    </filters>
    <label>MV22</label>
</ListView>