force-app/main/default/objects/BOM__c/listViews/MV23.listView-meta.xml
<ListView>
    <fullName>MV23</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>ReferenceMonth__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>RDOsDailyRateSum__c</columns>
    <columns>Efficiency__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV23</value>
    </filters>
    <label>MV23</label>
</ListView>