force-app/main/default/objects/BOM__c/listViews/MV24.listView-meta.xml
<ListView>
    <fullName>MV24</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>RDOsDailyRateSum__c</columns>
    <columns>DailyRateLosses__c</columns>
    <columns>Efficiency__c</columns>
    <columns>RevenueServices__c</columns>
    <columns>RevenueCharter__c</columns>
    <columns>BurnedGasVolume__c</columns>
    <columns>SumDieselConsumed__c</columns>
    <columns>IUGA__c</columns>
    <columns>POBClient__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV24</value>
    </filters>
    <label>MV24</label>
</ListView>