force-app/main/default/objects/BOM__c/listViews/MV26.listView-meta.xml
<ListView>
    <fullName>MV26</fullName>
    <columns>NAME</columns>
    <columns>VesselShortName__c</columns>
    <columns>ReferenceMonth__c</columns>
    <columns>RDOsDailyRateSum__c</columns>
    <columns>StartDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>contains</operation>
        <value>MV26</value>
    </filters>
    <label>MV26</label>
</ListView>