force-app/main/default/objects/BOM__c/listViews/MV27.listView-meta.xml
<ListView>
    <fullName>MV27</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>ReferenceMonth__c</columns>
    <columns>RDOsDailyRateSum__c</columns>
    <columns>Efficiency__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>contains</operation>
        <value>MV27</value>
    </filters>
    <label>MV27</label>
</ListView>