force-app/main/default/objects/BOM__c/listViews/MV29.listView-meta.xml
<ListView>
    <fullName>MV29</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>ReferenceMonth__c</columns>
    <columns>RDOsDailyRateSum__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV29</value>
    </filters>
    <label>MV29</label>
</ListView>